--- a/css/circusstyle.css
+++ b/css/circusstyle.css
@@ -64,7 +64,7 @@ button {
     border: none;
     cursor: pointer;
     transition: all 0.3s;
-    margin: 0 auto; /* добавили выравнивание по центру по горизонтали */
+    margin: 0 auto; 
 }
 
 button:hover {
